# appmixer-component-preview

./: .env.example  .gitignore  CLAUDE.md  components.json  jsconfig.json  package-lock.json  package.json  svelte.config.js
agents/: README.md  run.js  runServer.js  selfImprovingTestFlowAgent.js  serverFlowAgent.js  test.js  testServer.js  utils.js
agents/prompts/: generator-system.md  meta-improver-system.md  reviewer-system.md
agents/validators/: coverage.js  structural.js
appmixerApi/: accounts.js  client.js  flows.js  helpers.js  index.js  store.js
scripts/: generate-data.js  run-ai-test.mjs  run-planning.mjs
src/: app.css  app.d.ts  hooks.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: utils.ts
src/lib/components/: AiChatPanel.svelte  BehaviorTab.svelte  ComponentJsonTab.svelte  ComponentPreview.svelte  ConnectorDashboard.svelte  DiffTab.svelte  E2EFlowsPanel.svelte  InputsTab.svelte  InspectorEditor.svelte  InspectorPreview.svelte  OutputsTab.svelte  PropertiesTab.svelte  SchemaPreview.svelte  SettingsPanel.svelte  StatisticsPanel.svelte  TestPlanViewer.svelte  VibeKanbanWrapper.svelte
src/lib/server/: appmixer.js  github.js  state.js
src/lib/stores/: fileSync.svelte.js  fileSync.svelte.ts
src/lib/types/: component.js  component.ts
src/lib/utils/: commandRunner.svelte.js
src/routes/: +layout.js  +layout.svelte  +page.js  +page.svelte  +page.ts
src/routes/api/auth/: +server.js
src/routes/api/chat/: +server.js  +server.ts
(+44 files in other folders)
