[package]
name = "appmixer-component-preview"
version = "0.0.1"
description = "Appmixer Component Preview"
authors = []
edition = "2021"

[lib]
name = "appmixer_component_preview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
